--- a/Paystack.Service/Paystack.Service.csproj
+++ b/Paystack.Service/Paystack.Service.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Paystack.Model\Paystack.Model.csproj" />
+  </ItemGroup>
+
 </Project>
