--- a/Paysatck.API/appsettings.json
+++ b/Paysatck.API/appsettings.json
@@ -1,6 +1,6 @@
 {
     "Paystack": {
-        "SecretKey": "sk_test_02f82235112efc064ee1aa6355dfff2275689baa"
+        "SecretKey": ""
 
     },
     "Logging": {
