--- a/Paysatck.API/appsettings.json
+++ b/Paysatck.API/appsettings.json
@@ -1,8 +1,8 @@
 {
-    "Paystack": {
-        "SecretKey": ""
+    
+        "SecretKey": "",
 
-    },
+    
     "Logging": {
         "LogLevel": {
             "Default": "Information",
